# django_d2_models

./: .gitignore  Readme.md  setup.cfg
django_d2_models/: graph_builder.py  renderer.py
django_d2_models/commands/: generate.py
django_d2_models/management/commands/: generate.py  model_diagram.py
django_test_project/: requirments.txt
django_test_project/apps/chat/: apps.py  models.py
django_test_project/apps/chat/migrations/: 0001_initial.py
django_test_project/apps/users/: models.py
django_test_project/apps/users/migrations/: 0001_initial.py
django_test_project/django_test_project/: settings.py  urls.py
