[metadata]
name = django_d2_models
version = 0.1
description = Simple script for 
long_description = file: README.md
url = https://www.example.com/
author = Pavel Arnold
author_email = hukumka212@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.*
    Framework :: Django :: 4.*
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0  # Replace "X.Y" as appropriate
